--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,16 @@
 {
     "require-dev": {
         "phpunit/phpunit": "^11.2"
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "src"
+        }
+    },
+
+    "autoload-dev": {
+        "psr-4": {
+            "App\\Tests\\": "tests"
+        }
     }
 }
