--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require-dev": {
-        "phpunit/phpunit": "^11.2"
+        "phpunit/phpunit": "^11.2",
+        "symfony/var-dumper": "^7.1"
     },
     "autoload": {
         "psr-4": {
@@ -12,5 +13,10 @@
         "psr-4": {
             "App\\Tests\\": "tests"
         }
+    },
+    "require": {
+        "symfony/http-client": "^7.1",
+        "doctrine/orm": "^3.2",
+        "symfony/cache": "^7.1"
     }
 }
