--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,9 @@
 {
     "require-dev": {
-        "phpunit/phpunit": "^11.2",
-        "symfony/var-dumper": "^7.1"
+        "phpunit/phpunit": "^9.5 || ^10.0",
+        "symfony/var-dumper": "^5.4 || ^6.0"
     },
+
     "autoload": {
         "psr-4": {
             "App\\": "src"
@@ -11,12 +12,12 @@
 
     "autoload-dev": {
         "psr-4": {
-            "App\\Tests\\": "tests"
+            "App\\Tests\\": "tests/"
         }
     },
     "require": {
-        "symfony/http-client": "^7.1",
-        "doctrine/orm": "^3.2",
-        "symfony/cache": "^7.1"
+        "symfony/http-client": "^5.4 || ^6.2",
+        "doctrine/orm": "^2.10",
+        "symfony/cache": "^5.4 || ^6.2"
     }
 }
