--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,9 @@
     "require-dev": {
         "phpunit/phpunit": "^9.5 || ^10.0",
         "symfony/var-dumper": "^5.4 || ^6.0",
-        "phpstan/phpstan": "^1.11"
+        "phpstan/phpstan": "^1.11",
+        "phpstan/extension-installer": "^1.4",
+        "phpstan/phpstan-doctrine": "^1.5"
     },
 
     "autoload": {
@@ -21,5 +23,10 @@
         "doctrine/orm": "^2.10",
         "symfony/cache": "^5.4 || ^6.2",
         "guzzlehttp/guzzle": "^7.9"
+    },
+    "config": {
+        "allow-plugins": {
+            "phpstan/extension-installer": true
+        }
     }
 }
